--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,9 @@ body {
 
 .section {
 	padding:  100px 0;
-
+	
 }
+
 
 .aboutImage {
 	max-width: 100%;
@@ -255,6 +256,7 @@ body {
 
 #navigation li a {
 	color: white;
+	font-size: 20px;
 }
 
 .navbar-brand,
